--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: cpp
 os: linux
 dist: precise
-sudo: true
 
+# Instalação de dependências
 before_install:
-  - sudo apt update
+  # - sudo apt update
   - sudo apt install g++ make bison libboost-dev flex
 
+# Instalação principal
 script:
   - chmod a+x configure
   - ./configure
