Atualização do arquivo de CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: cpp
 os: linux
-dist: precise
+dist: xenial
 
 # Instalação de dependências
 before_install:
-  # - sudo apt update
+  - sudo apt update
   - sudo apt install g++ make bison libboost-all-dev flex
 
 # Instalação principal
